[tool.uv]
index-strategy = 'unsafe-best-match'
find-links = ['https://download.pytorch.org/whl/torch_stable.html']
extra-index-url = [
    'https://pypi.org/simple'
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
markupsafe = { index = "basic" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[project]
name = "strategic-memory-retrieval-reinforcement-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium==0.29.1",
    "numpy==2.3.1",
    "pandas==2.3.1",
    "sb3-contrib==2.6.0",
    "stable-baselines3==2.6.0",
    "tabulate==0.9.0",
    "torch==2.5.1",
    "tqdm==4.67.1",
]
